src/test/ui/issues/issue-32922.stderr
error: compilation successful
  --> $DIR/issue-32922.rs:25:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | |     foo! {};
LL | |     bar! {};
LL | |
LL | |     let mut a = true;
LL | |     baz!(a);
LL | | }
   | |_^

error: aborting due to previous error

